--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -12,5 +12,6 @@
         <li>No topic has been created yet.</li>
     {% endfor %}
 </ul>
+<a href="{% url 'learning_logs:new_topic' %}">Add new Topic</a>
 {% endblock content %}
 
