--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -10,6 +10,7 @@
     <li>
         <p>{{ entry.date_added|date:'d M Y H:i'}}</p>
         <p>{{ entry.text|linebreaks }}</p>
+        <p><a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit Entry</a></p>
     </li>
     {% empty %}
         <li>No entries yet.</li>
