--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,6 +1,21 @@
 <p>
     <a href="{% url "learning_logs:index" %}">Learning Log</a>
     <a href="{% url "learning_logs:topics" %}">Topics</a>
+    {% if user.is_authenticated %}
+        Witaj, {{ user.username}}.
+        <a href="{% url "accounts:logout" %}">Logout</a>
+    {% else %}
+        <a href="{% url "accounts:register" %}">Sign Up</a>
+        <a href="{% url "accounts:login" %}">Login</a>
+    {% endif %}
 </p>
 
 {% block content %}{% endblock content %}
+
+{% if user.is_authenticated %}
+    <hr />
+    <form action="{% url "accounts:logout" %}" method='post'>
+        {% csrf_token %}
+        <button name='submit'>Logout</button>
+    </form>
+{% endif %}
