--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,21 +1,61 @@
-<p>
-    <a href="{% url "learning_logs:index" %}">Learning Log</a>
-    <a href="{% url "learning_logs:topics" %}">Topics</a>
-    {% if user.is_authenticated %}
-        Witaj, {{ user.username}}.
-        <a href="{% url "accounts:logout" %}">Logout</a>
-    {% else %}
-        <a href="{% url "accounts:register" %}">Sign Up</a>
-        <a href="{% url "accounts:login" %}">Login</a>
-    {% endif %}
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Learning Log</title>
 
-{% block content %}{% endblock content %}
+    {% load django_bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    
+</head>
+<body>
 
-{% if user.is_authenticated %}
-    <hr />
-    <form action="{% url "accounts:logout" %}" method='post'>
-        {% csrf_token %}
-        <button name='submit'>Logout</button>
-    </form>
-{% endif %}
+    <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url "learning_logs:index" %}">Learning Log</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-mb-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "learning_logs:topics" %}">Topics</a>
+                    </li>
+                </ul>
+                <!--Links related to a user account-->
+                <ul class="navbar-nav ms-auto mb-2 mb-mb-0">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <span class="navbar-text me-2">Witaj, {{ user.username}}.</span>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "accounts:register" %}">Sign Up</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="{% url "accounts:login" %}">Login</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                {% if user.is_authenticated %}
+                <form action="{% url "accounts:logout" %}" method='post'>
+                    {% csrf_token %}
+                    <button name='submit' class="btn btn-outline-secondary btn-sm">Logout</button>
+                </form>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+    <main class="container">
+        <div class="pb-2 mb-2 border-bottom">
+            {% block page_header %}{% endblock page_header %}
+        </div>
+        <div>
+            {% block content %}{% endblock content %}
+        </div>
+    </main>
+</body>
+</html>
