styling of index page

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,6 +1,15 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
-<p> Learning Log helps you monitoring progress on your learning - whatever topic it can be.</p>
-{% endblock content %}
+{% block page_header %}
+    <div class="p-3 mb-4 bg-light border rounded-3">
+        <div class="container-fluid py-4">
+            <h1 class="display-3">Track progress in learning</h1>
 
+            <p class="lead">
+               Register your account to start monitoring your progress and view topics of interest.
+            </p>
+            
+            <a class="btn btn-primary btn-lg mt-1" href="{% url "accounts:register" %}">Sign Up &raquo;</a>
+        </div>
+    </div>    
+{% endblock page_header %}
