--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,15 +1,16 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
-    {% if form.errors %}
-    <p>User name and pass are not correct. Try again.</p>
-    {% endif %}
+{% load django_bootstrap5 %}
 
+{% block page_header %}
+    <h2>Login to your account</h2>
+{% endblock page_header %}
+
+{% block content %}
     <form method='post' action="{% url 'accounts:login' %}">
         {% csrf_token %}
-        {{ form.as_div }}
-
-        <button name="submit">Login</button>
+        {% bootstrap_form form %}
+        {% bootstrap_button button_type="submit" content="Login" %}
     </form>
 
 {% endblock content %}
