--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,19 +1,24 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
-<p>Topic: {{ topic }}</p>
+{% block page_header %}
+    <h1>{{ topic }}</h1>
+{% endblock page_header %}
 
-<p>Entries: </p>
-<p><a href="{% url 'learning_logs:new_entry' topic.id %}">Add new Entry</a></p>
-<ul>
+{% block content %}
+    <p><a href="{% url 'learning_logs:new_entry' topic.id %}">Add new Entry</a></p>
     {% for entry in entries %}
-    <li>
-        <p>{{ entry.date_added|date:'d M Y H:i'}}</p>
-        <p>{{ entry.text|linebreaks }}</p>
-        <p><a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit Entry</a></p>
-    </li>
+        <div class="card mb-3">
+            <h4 class="card-header">
+                {{ entry.date_added|date:'d M Y H:i'}}
+                <small>
+                    <a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit Entry</a>
+                </small>
+            </h4>
+            <div class="card-body">
+                {{ entry.text|linebreaks }}
+            </div>
+        </div>    
     {% empty %}
-        <li>No entries yet.</li>
+        <p>No entries yet.</p>
     {% endfor %}
-</ul>
 {% endblock content %}
